test/files/neg/viewtest.check
viewtest.scala:104 error: ambiguous implicit value:
 both method view4 in object O of type [a](a)a
 and method identity in object Predef of type [a](a)a
 match expected type (test.Str) => test.Ordered[test.Str]
        t = t insert Str(s)
              ^
one error found
